--- a/package.json
+++ b/package.json
@@ -8,23 +8,26 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "prestart": "npx prisma migrate deploy",
+    "check": "npm run lint && npm run format",
+    "prisma:generate": "npx prisma generate",
+    "prisma:generate:test": "npx prisma generate --schema=prisma/schema.test.prisma",
+    "prisma:migrate:deploy": "npx prisma migrate deploy",
+    "prisma:migrate:dev": "npx prisma migrate dev",
+    "prisma:test:reset": "npx prisma migrate reset --schema=prisma/schema.test.prisma --force",
+    "prestart": "npm run prisma:migrate:deploy",
     "start": "nest start",
-    "prestart:dev": "npx prisma migrate dev",
+    "prestart:dev": "npm run prisma:migrate:dev",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
     "pretest": "npx prisma db push --schema=prisma/schema.test.prisma",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "prisma:generate": "npx prisma generate",
-    "prisma:generate:test": "npx prisma generate --schema=prisma/schema.test.prisma",
-    "prisma:migrate:deploy": "npx prisma migrate deploy",
-    "prisma:migrate:dev": "npx prisma migrate dev"
+    "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -33,6 +36,9 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.19.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
+    "crypto-js": "^4.2.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
@@ -42,6 +48,7 @@
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
+    "@types/crypto-js": "^4.2.2",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
