feat: first table with relationship and data seed to auxiliar table

--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" \"prisma/**/*.ts\"",
     "check": "npm run lint && npm run format",
     "prisma:generate": "npx prisma generate",
     "prisma:generate:test": "npx prisma generate --schema=prisma/schema.test.prisma",
     "prisma:migrate:deploy": "npx prisma migrate deploy",
     "prisma:migrate:dev": "npx prisma migrate dev",
     "prisma:test:reset": "npx prisma migrate reset --schema=prisma/schema.test.prisma --force",
+    "prisma:seed": "ts-node --project prisma/tsconfig.prisma.json prisma/seed.ts",
     "prestart": "npm run prisma:migrate:deploy",
     "start": "nest start",
     "prestart:dev": "npm run prisma:migrate:dev",
